# Aerosp623Project2

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  FirstOrderPreserve.cpp  FirstOrderSolver.cpp  RoeFlux.cpp  SecondOrderPreserve.cpp  SecondOrderSolver.cpp  bump0.gri  bump1.gri  bump2.gri  bump3.gri  bump4.gri
firstordersolver/: CMakeLists.txt  main.cpp
freestreampreserve/: CMakeLists.txt  main.cpp
include/: euler2d.hpp  flux.hpp  mesh2d.hpp
include/Conv2D/: EulerDefaultBase.hpp  Mesh.hpp
meshmat/: CMakeLists.txt
roeflux/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  EulerDefaultBase.cpp  Mesh.cpp  conv2d.cpp  euler2d.cpp  flux.cpp  mesh2d.cpp
test/: CMakeLists.txt  MeshTest.cpp  flux_test.cpp  mesh2d_test.cpp
